[package]
name = "raytracing-the-rest-of-your-life"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
num-traits = "0.2.15"
packed_simd = "0.3.8"
rand = { version = "0.8.4", features = ["small_rng"] }
rayon = "1.7.0"
sdl2 = { version = "0.35.2", features = ["bundled"], optional = true }

[features]
default = ["gui"]
gui = ["sdl2"]
